--- a/contact.html
+++ b/contact.html
@@ -74,8 +74,8 @@
   
             <button id="sendButton" type="submit" class="btn btn-primary"><i class="fas fa-envelope fa-lg"></i> Send</button>
             <button id="cancelButton" type="reset" class="btn btn-warning"><i class="fas fa-undo fa-lg"></i> Cancel</button>
-            <div class="col-lg-3 col-md-3"><a href="contact-list.html" class="btn btn-primary btn-lg"><i class="fas fa-users"></i>See Conact List</a></div>
           </form>
+          <div class="col-lg-3 col-md-3"><a href="contact-list.html" class="btn btn-primary btn-lg"><i class="fas fa-users"></i>See Contact List</a></div>
         </div>
         
     
